fix dark mode color in <pre>

--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -80,6 +80,10 @@ input[type=text], input[type=password], input[type=email], input[type=date], inp
         color: #abb2bf;
         background: #282c34;
     }
+
+    pre {
+        color: #ffffff;
+    }
 }
 
 
